# MetaServer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_ARCHITECTURE_DESIGN.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  README.md  codecov.yml  main.py  pyproject.toml  ruff.toml  verify_phase2.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-agent-pipeline.yml  ai-pr-review-pipeline.yml  ci.yml  cleanup-pr-comments.yml  codeql.yml  full-cleanup.yml  health-check.yml  intelligent-pr-validation.yml  post-merge-setup.yml  pr-consolidation.yml  pylint.yml  release.yml  rerun-pr-reviews.yml  validate-setup.yml
benchmarks/: PERFORMANCE_SUMMARY.txt  baseline_results.json  comparison.json  create_comparison.py  generate_performance_summary.py  invariant_validation.txt  load_test_results.json  optimized_results.json  run_all_benchmarks.sh  run_baseline.sh  run_baseline_benchmark.py  run_invariant_validation.py  run_load_tests.py  run_optimized_benchmark.py
config/: agents.yaml.example  client_configs.md  litellm_config.yaml  meta-mcp-supervisor.service  models.yaml
docs/: AGENT_SYSTEM.md  AI_AGENT_PIPELINE.md  PR_CLEANUP.md  PR_CONSOLIDATION.md
docs/architecture/: SECURITY_BOUNDARY.md
docs/deployment/: SECURITY_SUMMARY.md
docs/development/: IMPLEMENTATION_SUMMARY.md  (+1 more)
examples/: README.md  ai_agent_quick_start.py
scripts/: README.md  benchmark_baseline.py  benchmark_optimized.py  check_phase_status.py  cleanup_ai_comments.py  consolidate_prs.py  enable_phase3_4_tests.py  gh-setup-secrets.sh  inspect_context.py  launch_review_agents.sh  migrate_tools_to_yaml.py  rollback_phase.sh  setup.sh  validate_invariants.py  verify_imports.py  verify_redis.py
servers/: __init__.py  admin_tools.py  core_tools.py
tests/: README.md  SECURITY_TESTS_README.md  __init__.py  conftest.py  integration_hooks_manual.py  test_admin_tools.py  test_agent_hooks.py  test_audit_buffering.py  test_audit_fixes.py  test_audit_retention.py  test_batch_read.py  test_batch_search.py  test_batch_write.py  test_capability_tokens.py  test_command_runner.py  test_config.py  test_coverage_completion.py  test_elicitation.py  test_embedder.py  test_embedder_preallocation.py  test_expand_schema_tool.py  test_fail_safe.py  test_governance_integration.py  test_governance_modes.py  test_governance_ranking.py  test_lease_atomic_consume.py  test_lease_manager.py  test_lease_models.py  test_lease_performance.py  test_lease_purge_performance.py  test_lease_security.py  test_list_changed_emission.py  test_macro_governance.py  test_middleware_registry_controls.py  test_no_legacy_discovery_imports.py  test_notifications.py  test_performance_regression.py  test_policy_engine.py  test_progressive_discovery.py  test_redis_pooling.py  (+15 more)
(+109 files in other folders)
