[project]
name = "meta-mcp-server"
version = "0.1.0"
description = "Meta MCP Server - FastMCP-based server infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "starlette>=0.38",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
gui-approval = [
    "dasbus>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
]
