[project]
name = "meta-mcp-server"
version = "0.1.0"
description = "Meta MCP Server - FastMCP-based server infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "starlette>=0.38",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
gui-approval = [
    "dasbus>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "verify_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src", "MetaServer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pyright]
include = ["src", "MetaServer"]
exclude = [
    "**/__pycache__",
    ".venv",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in tests

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.6.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.5",
]
